<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBanner"
        android:contentDescription="@string/profileButtonDesc"
        app:layout_constraintBottom_toBottomOf="@+id/homeButton"
        app:layout_constraintEnd_toStartOf="@+id/homeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homeButton"
        app:srcCompat="@drawable/nav_person" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:background="@color/colorBanner"
        android:contentDescription="@string/homeButtonDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:srcCompat="@drawable/nav_home" />

    <ImageButton
        android:id="@+id/locationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBanner"
        android:contentDescription="@string/locationButtonDesc"
        app:layout_constraintBottom_toBottomOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="@+id/homeButton"
        app:srcCompat="@drawable/nav_location" />
</android.support.constraint.ConstraintLayout>