<?xml version="1.0" encoding="utf-8"?>
<!-- TODO: Add a version to work better on larger screens -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".InfoActivity"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/banner_image_view"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorBanner"
        android:contentDescription="@string/homeScreenBannerDesc"
        android:foreground="@android:drawable/screen_background_dark_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/ic_yellowbannerwithtext"
        tools:ignore="UnusedAttribute" />

	<ImageView
		android:id="@+id/department_icon"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="140dp"
		android:adjustViewBounds="false"
		android:contentDescription="@string/placeholderText"
		android:cropToPadding="false"
		android:minWidth="80sp"
		app:layout_constraintBottom_toTopOf="@+id/nav_fragment"
		app:layout_constraintEnd_toStartOf="@+id/department_desc_text"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/department_banner"
		app:layout_constraintVertical_bias="0.0" />

	<TextView
		android:id="@+id/department_label_text"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/placeholderText"
		android:textAlignment="center"
		android:textColor="@color/colorHomeButtons"
		app:layout_constraintBottom_toTopOf="@+id/nav_fragment"
		app:layout_constraintEnd_toEndOf="@+id/department_icon"
		app:layout_constraintStart_toStartOf="@+id/department_icon"
		app:layout_constraintTop_toBottomOf="@+id/department_icon"
		app:layout_constraintVertical_bias="0.0" />

    <fragment
        android:id="@+id/nav_fragment"
        android:name="org.sunyulstercs.supportsmeapp.navFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout="@layout/fragment_nav" />

    <TextView
        android:id="@+id/department_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_item_background"
        android:text="@string/placeholderText"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorBanner"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nav_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_image_view"
        app:layout_constraintVertical_bias="0.0" />

	<ImageView
		android:id="@+id/department_banner"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:contentDescription="@string/placeholderText"
		app:layout_constraintBottom_toTopOf="@+id/department_desc_text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/department_title_text"
		tools:srcCompat="@tools:sample/backgrounds/scenic[17]" />

	<TextView
		android:id="@+id/department_desc_text"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="100dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="16dp"
		android:text="@string/placeholderText"
		android:textAlignment="textStart"
		android:textColor="@color/colorMenuRows"
		android:textSize="16sp"
		app:layout_constraintBottom_toTopOf="@+id/nav_fragment"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/department_title_text"
		app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/department_phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="textStart"
        android:textColor="@color/colorMint"
        app:layout_constraintBottom_toTopOf="@+id/nav_fragment"
        app:layout_constraintEnd_toEndOf="@+id/department_desc_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/department_desc_text"
        app:layout_constraintTop_toBottomOf="@+id/department_desc_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/department_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="textStart"
        android:textColor="@color/colorInfoItemButton"
        app:layout_constraintBottom_toTopOf="@+id/nav_fragment"
        app:layout_constraintEnd_toEndOf="@+id/department_phone_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/department_phone_text"
        app:layout_constraintTop_toBottomOf="@+id/department_phone_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/department_website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/infoLinkButtonText"
        app:layout_constraintBottom_toTopOf="@+id/nav_fragment"
        app:layout_constraintEnd_toEndOf="@+id/department_desc_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/department_desc_text"
        app:layout_constraintTop_toBottomOf="@+id/department_email_text" />

</android.support.constraint.ConstraintLayout>